# Backend

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile-app  README.md  docker-compose.dev.yml  docker-compose.yml  playground.py  pyproject.toml
app/: main.py  models.py
app/auth/: auth_models.py  auth_routes.py  auth_service.py  token_base.py  user_base.py
app/auth/utils/: fixed_encryption.py  otp_manager.py  phone_number.py
app/common/: schemas.py
app/core/: config.py  database.py
app/findhelp/: router.py  schemas.py  service.py
app/funds/: funds_routes.py
app/items/: crud.py  enums.py  items_routes.py  items_service.py  mappers.py  models.py  router.py  schemas.py  service.py
app/items/cruds/: item_crud.py  item_delivery_crud.py  item_image_crud.py
app/ml/: config.py  dummy.py  ml_analyzer.py  ml_processor.py  ml_utils.py  router.py  schemas.py  service.py
app/needs/: needs_routes.py
app/profile/: profile_routes.py
app/requests/: mappers.py  models.py  router.py  schemas.py  service.py
app/requests/cruds/: request_crud.py  request_delivery_crud.py
app/sharecare/: router.py  schemas.py  service.py
app/user/: user_base.py  user_models.py  user_routes.py  user_schemas.py  user_service.py
app/utils/: consts.py  get_current_user.py  handle_errors.py  server_utils.py
app/utils/decorators/: handle_errors.py
app/utils/di/: get_current_user.py  require_auth.py
app/utils/funcs/: datetime_to_str_date.py  get_organization_name.py  get_user_telegram.py  search_init_statement.py
